@@ -181,6 +181,22 @@ name|testdo
 operator|.
 name|meaningful_pk
 operator|.
+name|MeaningfulPkDep2
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|testdo
+operator|.
+name|meaningful_pk
+operator|.
 name|MeaningfulPkTest2
 import|;
 end_import
@@ -1517,6 +1533,108 @@ name|context
 operator|.
 name|commitChanges
 argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testMeaningfulFKToOneInvalidate
+parameter_list|()
+block|{
+name|MeaningfulPk
+name|pk
+init|=
+name|context
+operator|.
+name|newObject
+argument_list|(
+name|MeaningfulPk
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|MeaningfulPkDep2
+name|dep
+init|=
+name|context
+operator|.
+name|newObject
+argument_list|(
+name|MeaningfulPkDep2
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|dep
+operator|.
+name|setMeaningfulPk
+argument_list|(
+name|pk
+argument_list|)
+expr_stmt|;
+name|dep
+operator|.
+name|setDescr
+argument_list|(
+literal|"test"
+argument_list|)
+expr_stmt|;
+name|ObjectContext
+name|childContext
+init|=
+name|runtime
+operator|.
+name|newContext
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|MeaningfulPkDep2
+name|depChild
+init|=
+name|childContext
+operator|.
+name|localObject
+argument_list|(
+name|dep
+argument_list|)
+decl_stmt|;
+name|depChild
+operator|.
+name|setDescr
+argument_list|(
+literal|"test2"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"test2"
+argument_list|,
+name|depChild
+operator|.
+name|getDescr
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|depChild
+operator|.
+name|getMeaningfulPk
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|depChild
+operator|.
+name|getMeaningfulPk
+argument_list|()
+operator|.
+name|getPk
+argument_list|()
+argument_list|)
 expr_stmt|;
 block|}
 block|}
