@@ -1,0 +1,57 @@
+begin_unit|revision:1.0.0;language:Java;cregit-version:0.0.1
+begin_package
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|testdo
+operator|.
+name|meaningful_pk
+package|;
+end_package
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|testdo
+operator|.
+name|meaningful_pk
+operator|.
+name|auto
+operator|.
+name|_ClientMeaningfulPkDep2
+import|;
+end_import
+
+begin_comment
+comment|/**  * A persistent class mapped as "MeaningfulPkDep2" Cayenne entity.  */
+end_comment
+
+begin_class
+specifier|public
+class|class
+name|ClientMeaningfulPkDep2
+extends|extends
+name|_ClientMeaningfulPkDep2
+block|{
+specifier|private
+specifier|static
+specifier|final
+name|long
+name|serialVersionUID
+init|=
+literal|1L
+decl_stmt|;
+block|}
+end_class
+
+end_unit
+
