@@ -99,7 +99,7 @@ name|testdo
 operator|.
 name|meaningful_pk
 operator|.
-name|ClientMeaningfulPkDep2
+name|ClientMeaningfulPk
 import|;
 end_import
 
@@ -118,17 +118,37 @@ import|;
 end_import
 
 begin_comment
-comment|/**  * A generated persistent class mapped as "MeaningfulPk" Cayenne entity. It is a good idea to  * avoid changing this class manually, since it will be overwritten next time code is  * regenerated. If you need to make any customizations, put them in a subclass.  */
+comment|/**  * A generated persistent class mapped as "MeaningfulPkDep2" Cayenne entity. It is a good idea to  * avoid changing this class manually, since it will be overwritten next time code is  * regenerated. If you need to make any customizations, put them in a subclass.  */
 end_comment
 
 begin_class
 specifier|public
 specifier|abstract
 class|class
-name|_ClientMeaningfulPk
+name|_ClientMeaningfulPkDep2
 extends|extends
 name|PersistentObject
 block|{
+specifier|public
+specifier|static
+specifier|final
+name|StringProperty
+argument_list|<
+name|String
+argument_list|>
+name|DESCR
+init|=
+name|PropertyFactory
+operator|.
+name|createString
+argument_list|(
+literal|"descr"
+argument_list|,
+name|String
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 specifier|public
 specifier|static
 specifier|final
@@ -154,20 +174,24 @@ specifier|static
 specifier|final
 name|EntityProperty
 argument_list|<
-name|ClientMeaningfulPkDep2
+name|ClientMeaningfulPk
 argument_list|>
-name|MEANINGFUL_PK_DEP2S
+name|MEANINGFUL_PK
 init|=
 name|PropertyFactory
 operator|.
 name|createEntity
 argument_list|(
-literal|"meaningfulPkDep2s"
+literal|"meaningfulPk"
 argument_list|,
-name|ClientMeaningfulPkDep2
+name|ClientMeaningfulPk
 operator|.
 name|class
 argument_list|)
+decl_stmt|;
+specifier|protected
+name|String
+name|descr
 decl_stmt|;
 specifier|protected
 name|String
@@ -176,10 +200,87 @@ decl_stmt|;
 specifier|protected
 name|ValueHolder
 argument_list|<
-name|ClientMeaningfulPkDep2
+name|ClientMeaningfulPk
 argument_list|>
-name|meaningfulPkDep2s
+name|meaningfulPk
 decl_stmt|;
+specifier|public
+name|String
+name|getDescr
+parameter_list|()
+block|{
+if|if
+condition|(
+name|objectContext
+operator|!=
+literal|null
+condition|)
+block|{
+name|objectContext
+operator|.
+name|prepareForAccess
+argument_list|(
+name|this
+argument_list|,
+literal|"descr"
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|descr
+return|;
+block|}
+specifier|public
+name|void
+name|setDescr
+parameter_list|(
+name|String
+name|descr
+parameter_list|)
+block|{
+if|if
+condition|(
+name|objectContext
+operator|!=
+literal|null
+condition|)
+block|{
+name|objectContext
+operator|.
+name|prepareForAccess
+argument_list|(
+name|this
+argument_list|,
+literal|"descr"
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|objectContext
+operator|.
+name|propertyChanged
+argument_list|(
+name|this
+argument_list|,
+literal|"descr"
+argument_list|,
+name|this
+operator|.
+name|descr
+argument_list|,
+name|descr
+argument_list|)
+expr_stmt|;
+block|}
+name|this
+operator|.
+name|descr
+operator|=
+name|descr
+expr_stmt|;
+block|}
 specifier|public
 name|String
 name|getPk
@@ -258,8 +359,8 @@ name|pk
 expr_stmt|;
 block|}
 specifier|public
-name|ClientMeaningfulPkDep2
-name|getMeaningfulPkDep2s
+name|ClientMeaningfulPk
+name|getMeaningfulPk
 parameter_list|()
 block|{
 if|if
@@ -275,7 +376,7 @@ name|prepareForAccess
 argument_list|(
 name|this
 argument_list|,
-literal|"meaningfulPkDep2s"
+literal|"meaningfulPk"
 argument_list|,
 literal|true
 argument_list|)
@@ -285,14 +386,14 @@ if|else if
 condition|(
 name|this
 operator|.
-name|meaningfulPkDep2s
+name|meaningfulPk
 operator|==
 literal|null
 condition|)
 block|{
 name|this
 operator|.
-name|meaningfulPkDep2s
+name|meaningfulPk
 operator|=
 operator|new
 name|PersistentObjectHolder
@@ -300,12 +401,12 @@ argument_list|<>
 argument_list|(
 name|this
 argument_list|,
-literal|"meaningfulPkDep2s"
+literal|"meaningfulPk"
 argument_list|)
 expr_stmt|;
 block|}
 return|return
-name|meaningfulPkDep2s
+name|meaningfulPk
 operator|.
 name|getValue
 argument_list|()
@@ -313,10 +414,10 @@ return|;
 block|}
 specifier|public
 name|void
-name|setMeaningfulPkDep2s
+name|setMeaningfulPk
 parameter_list|(
-name|ClientMeaningfulPkDep2
-name|meaningfulPkDep2s
+name|ClientMeaningfulPk
+name|meaningfulPk
 parameter_list|)
 block|{
 if|if
@@ -332,7 +433,7 @@ name|prepareForAccess
 argument_list|(
 name|this
 argument_list|,
-literal|"meaningfulPkDep2s"
+literal|"meaningfulPk"
 argument_list|,
 literal|true
 argument_list|)
@@ -342,14 +443,14 @@ if|else if
 condition|(
 name|this
 operator|.
-name|meaningfulPkDep2s
+name|meaningfulPk
 operator|==
 literal|null
 condition|)
 block|{
 name|this
 operator|.
-name|meaningfulPkDep2s
+name|meaningfulPk
 operator|=
 operator|new
 name|PersistentObjectHolder
@@ -357,17 +458,17 @@ argument_list|<>
 argument_list|(
 name|this
 argument_list|,
-literal|"meaningfulPkDep2s"
+literal|"meaningfulPk"
 argument_list|)
 expr_stmt|;
 block|}
 name|this
 operator|.
-name|meaningfulPkDep2s
+name|meaningfulPk
 operator|.
 name|setValue
 argument_list|(
-name|meaningfulPkDep2s
+name|meaningfulPk
 argument_list|)
 expr_stmt|;
 block|}
