@@ -117,19 +117,19 @@ name|testdo
 operator|.
 name|meaningful_pk
 operator|.
-name|MeaningfulPkDep2
+name|MeaningfulPk
 import|;
 end_import
 
 begin_comment
-comment|/**  * Class _MeaningfulPk was generated by Cayenne.  * It is probably a good idea to avoid changing this class manually,  * since it may be overwritten next time code is regenerated.  * If you need to make any customizations, please use subclass.  */
+comment|/**  * Class _MeaningfulPkDep2 was generated by Cayenne.  * It is probably a good idea to avoid changing this class manually,  * since it may be overwritten next time code is regenerated.  * If you need to make any customizations, please use subclass.  */
 end_comment
 
 begin_class
 specifier|public
 specifier|abstract
 class|class
-name|_MeaningfulPk
+name|_MeaningfulPkDep2
 extends|extends
 name|BaseDataObject
 block|{
@@ -156,6 +156,26 @@ name|StringProperty
 argument_list|<
 name|String
 argument_list|>
+name|DESCR
+init|=
+name|PropertyFactory
+operator|.
+name|createString
+argument_list|(
+literal|"descr"
+argument_list|,
+name|String
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|StringProperty
+argument_list|<
+name|String
+argument_list|>
 name|PK
 init|=
 name|PropertyFactory
@@ -174,20 +194,24 @@ specifier|static
 specifier|final
 name|EntityProperty
 argument_list|<
-name|MeaningfulPkDep2
+name|MeaningfulPk
 argument_list|>
-name|MEANINGFUL_PK_DEP2S
+name|MEANINGFUL_PK
 init|=
 name|PropertyFactory
 operator|.
 name|createEntity
 argument_list|(
-literal|"meaningfulPkDep2s"
+literal|"meaningfulPk"
 argument_list|,
-name|MeaningfulPkDep2
+name|MeaningfulPk
 operator|.
 name|class
 argument_list|)
+decl_stmt|;
+specifier|protected
+name|String
+name|descr
 decl_stmt|;
 specifier|protected
 name|String
@@ -195,8 +219,50 @@ name|pk
 decl_stmt|;
 specifier|protected
 name|Object
-name|meaningfulPkDep2s
+name|meaningfulPk
 decl_stmt|;
+specifier|public
+name|void
+name|setDescr
+parameter_list|(
+name|String
+name|descr
+parameter_list|)
+block|{
+name|beforePropertyWrite
+argument_list|(
+literal|"descr"
+argument_list|,
+name|this
+operator|.
+name|descr
+argument_list|,
+name|descr
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|descr
+operator|=
+name|descr
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getDescr
+parameter_list|()
+block|{
+name|beforePropertyRead
+argument_list|(
+literal|"descr"
+argument_list|)
+expr_stmt|;
+return|return
+name|this
+operator|.
+name|descr
+return|;
+block|}
 specifier|public
 name|void
 name|setPk
@@ -241,34 +307,34 @@ return|;
 block|}
 specifier|public
 name|void
-name|setMeaningfulPkDep2s
+name|setMeaningfulPk
 parameter_list|(
-name|MeaningfulPkDep2
-name|meaningfulPkDep2s
+name|MeaningfulPk
+name|meaningfulPk
 parameter_list|)
 block|{
 name|setToOneTarget
 argument_list|(
-literal|"meaningfulPkDep2s"
+literal|"meaningfulPk"
 argument_list|,
-name|meaningfulPkDep2s
+name|meaningfulPk
 argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
 block|}
 specifier|public
-name|MeaningfulPkDep2
-name|getMeaningfulPkDep2s
+name|MeaningfulPk
+name|getMeaningfulPk
 parameter_list|()
 block|{
 return|return
 operator|(
-name|MeaningfulPkDep2
+name|MeaningfulPk
 operator|)
 name|readProperty
 argument_list|(
-literal|"meaningfulPkDep2s"
+literal|"meaningfulPk"
 argument_list|)
 return|;
 block|}
@@ -301,6 +367,14 @@ name|propName
 condition|)
 block|{
 case|case
+literal|"descr"
+case|:
+return|return
+name|this
+operator|.
+name|descr
+return|;
+case|case
 literal|"pk"
 case|:
 return|return
@@ -309,12 +383,12 @@ operator|.
 name|pk
 return|;
 case|case
-literal|"meaningfulPkDep2s"
+literal|"meaningfulPk"
 case|:
 return|return
 name|this
 operator|.
-name|meaningfulPkDep2s
+name|meaningfulPk
 return|;
 default|default:
 return|return
@@ -359,6 +433,19 @@ name|propName
 condition|)
 block|{
 case|case
+literal|"descr"
+case|:
+name|this
+operator|.
+name|descr
+operator|=
+operator|(
+name|String
+operator|)
+name|val
+expr_stmt|;
+break|break;
+case|case
 literal|"pk"
 case|:
 name|this
@@ -372,11 +459,11 @@ name|val
 expr_stmt|;
 break|break;
 case|case
-literal|"meaningfulPkDep2s"
+literal|"meaningfulPk"
 case|:
 name|this
 operator|.
-name|meaningfulPkDep2s
+name|meaningfulPk
 operator|=
 name|val
 expr_stmt|;
@@ -452,6 +539,15 @@ name|writeObject
 argument_list|(
 name|this
 operator|.
+name|descr
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|writeObject
+argument_list|(
+name|this
+operator|.
 name|pk
 argument_list|)
 expr_stmt|;
@@ -461,7 +557,7 @@ name|writeObject
 argument_list|(
 name|this
 operator|.
-name|meaningfulPkDep2s
+name|meaningfulPk
 argument_list|)
 expr_stmt|;
 block|}
@@ -488,6 +584,18 @@ argument_list|)
 expr_stmt|;
 name|this
 operator|.
+name|descr
+operator|=
+operator|(
+name|String
+operator|)
+name|in
+operator|.
+name|readObject
+argument_list|()
+expr_stmt|;
+name|this
+operator|.
 name|pk
 operator|=
 operator|(
@@ -500,7 +608,7 @@ argument_list|()
 expr_stmt|;
 name|this
 operator|.
-name|meaningfulPkDep2s
+name|meaningfulPk
 operator|=
 name|in
 operator|.
