@@ -14,6 +14,10 @@
 		<db-attribute name="MASTER_PK" type="INTEGER"/>
 		<db-attribute name="PK_ATTRIBUTE" type="INTEGER" isPrimaryKey="true" isMandatory="true"/>
 	</db-entity>
+	<db-entity name="MEANINGFUL_PK_DEP2">
+		<db-attribute name="DESCR" type="VARCHAR" length="50"/>
+		<db-attribute name="PK" type="VARCHAR" isPrimaryKey="true" isMandatory="true" length="100"/>
+	</db-entity>
 	<db-entity name="MEANINGFUL_PK_TEST1">
 		<db-attribute name="DESCR" type="VARCHAR" length="50"/>
 		<db-attribute name="INT_ATTRIBUTE" type="INTEGER" isMandatory="true"/>
@@ -38,17 +42,29 @@
 	<obj-entity name="MeaningfulPk" className="org.apache.cayenne.testdo.meaningful_pk.MeaningfulPk" clientClassName="org.apache.cayenne.testdo.meaningful_pk.ClientMeaningfulPk" dbEntityName="MEANINGFUL_PK">
 		<obj-attribute name="pk" type="java.lang.String" db-attribute-path="PK"/>
 	</obj-entity>
+	<obj-entity name="MeaningfulPkDep2" className="org.apache.cayenne.testdo.meaningful_pk.MeaningfulPkDep2" clientClassName="org.apache.cayenne.testdo.meaningful_pk.MeaningfulPkDep2" dbEntityName="MEANINGFUL_PK_DEP2">
+		<obj-attribute name="descr" type="java.lang.String" db-attribute-path="DESCR"/>
+		<obj-attribute name="pk" type="java.lang.String" db-attribute-path="PK"/>
+	</obj-entity>
 	<obj-entity name="MeaningfulPkTest2" className="org.apache.cayenne.testdo.meaningful_pk.MeaningfulPkTest2" clientClassName="org.apache.cayenne.testdo.meaningful_pk.MeaningfulPkTest2" dbEntityName="MEANINGFUL_PK_TEST2">
 		<obj-attribute name="integerAttribute" type="java.lang.Integer" db-attribute-path="INTEGER_ATTRIBUTE"/>
 		<obj-attribute name="integerNullableAttribute" type="java.lang.Integer" db-attribute-path="INTEGER_NULLABLE_ATTRIBUTE"/>
 		<obj-attribute name="pkAttribute" type="java.lang.Integer" db-attribute-path="PK_ATTRIBUTE"/>
 	</obj-entity>
+	<db-relationship name="dep2" source="MEANINGFUL_PK" target="MEANINGFUL_PK_DEP2" toDependentPK="true">
+		<db-attribute-pair source="PK" target="PK"/>
+	</db-relationship>
 	<db-relationship name="toMeaningfulPK" source="MEANINGFUL_PK_DEP" target="MEANINGFUL_PK_TEST1">
 		<db-attribute-pair source="MASTER_PK" target="PK_ATTRIBUTE"/>
+	</db-relationship>
+	<db-relationship name="meaningfulPk" source="MEANINGFUL_PK_DEP2" target="MEANINGFUL_PK">
+		<db-attribute-pair source="PK" target="PK"/>
 	</db-relationship>
 	<db-relationship name="meaningfulPKDepArray" source="MEANINGFUL_PK_TEST1" target="MEANINGFUL_PK_DEP" toMany="true">
 		<db-attribute-pair source="PK_ATTRIBUTE" target="MASTER_PK"/>
 	</db-relationship>
 	<obj-relationship name="toMeaningfulPK" source="MeaningfulPKDep" target="MeaningfulPKTest1" db-relationship-path="toMeaningfulPK"/>
 	<obj-relationship name="meaningfulPKDepArray" source="MeaningfulPKTest1" target="MeaningfulPKDep" deleteRule="Cascade" db-relationship-path="meaningfulPKDepArray"/>
+	<obj-relationship name="meaningfulPkDep2s" source="MeaningfulPk" target="MeaningfulPkDep2" deleteRule="Deny" db-relationship-path="dep2"/>
+	<obj-relationship name="meaningfulPk" source="MeaningfulPkDep2" target="MeaningfulPk" deleteRule="Nullify" db-relationship-path="meaningfulPk"/>
 </data-map>
